fix: minor modifications to scrollbar

--- a/client/src/components/DailyPlanner.scss
+++ b/client/src/components/DailyPlanner.scss
@@ -2,7 +2,8 @@
 // https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_custom_scrollbar2
 
 ::-webkit-scrollbar {
-  width: 15px;
+  width: 10px;
+  height: 10px;
 }
 
 /* Track */
